fix image upload
